switch to using the ProcessBuilder to fix my problems with connecting a parent tty without allowing subprocesses to close it.  previous approach doesn't work: you end up with the input shuttle thread stuck in a blocking read even after the subprocess is closed.